# ChangeLog for net-wireless/openbsc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/openbsc/ChangeLog,v 1.3 2014/04/26 12:40:33 zx2c4 Exp $

  26 Apr 2014; Jason A. Donenfeld <zx2c4@gentoo.org> openbsc-9999.ebuild:
  Use right branch.

  26 Apr 2014; Jason A. Donenfeld <zx2c4@gentoo.org> openbsc-9999.ebuild:
  Fix deps.

*openbsc-9999 (26 Apr 2014)

  26 Apr 2014; Jason A. Donenfeld <zx2c4@gentoo.org> +metadata.xml,
  +openbsc-9999.ebuild:
  Initial import.