@@ -1,10 +1,11 @@
 DEFINED_PHASES=prepare unpack
-DEPEND=net-libs/libosmocore net-libs/libosmo-abis dev-db/libdbi !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool dev-vcs/git
+DEPEND=gprs? ( net-wireless/openggsn ) net-libs/libosmocore net-libs/libosmo-abis dev-db/libdbi !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool dev-vcs/git
 DESCRIPTION=OpenBSC, OsmoSGSN, OsmoBSC and other programs
 EAPI=5
 HOMEPAGE=http://openbsc.osmocom.org/trac/wiki/OpenBSC
+IUSE=+gprs
 LICENSE=GPL-2
-RDEPEND=net-libs/libosmocore net-libs/libosmo-abis dev-db/libdbi dev-db/libdbi-drivers[sqlite] dev-db/sqlite:3
+RDEPEND=gprs? ( net-wireless/openggsn ) net-libs/libosmocore net-libs/libosmo-abis dev-db/libdbi dev-db/libdbi-drivers[sqlite] dev-db/sqlite:3
 SLOT=0
 _eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	eutils	025442f2eecab39ad0b4e541b6e142af	git-2	2027b81a576527fa16bece425941e094	git-r3	e83b3dde426430f34178059a8de5299d	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=f0aa637582ed8a638119e39ef8e4acf8
+_md5_=d353921ec7e6e8d4862ed8782f15f062
