@@ -1,10 +1,10 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/openbsc/openbsc-9999.ebuild,v 1.3 2014/04/26 12:40:33 zx2c4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/openbsc/openbsc-9999.ebuild,v 1.4 2014/05/01 17:04:25 zx2c4 Exp $
 
 EAPI=5
 
-inherit autotools git-2
+inherit autotools git-2 eutils
 
 DESCRIPTION="OpenBSC, OsmoSGSN, OsmoBSC and other programs"
 HOMEPAGE="http://openbsc.osmocom.org/trac/wiki/OpenBSC"
@@ -14,9 +14,10 @@ EGIT_BRANCH="jolly/testing"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS=""
-IUSE=""
+IUSE="+gprs"
 
 DEPEND="
+	gprs? ( net-wireless/openggsn )
 	net-libs/libosmocore
 	net-libs/libosmo-abis
 	dev-db/libdbi"
@@ -28,5 +29,6 @@ S="${WORKDIR}/${P}/${PN}"
 EGIT_SOURCEDIR="${WORKDIR}/${P}"
 
 src_prepare() {
+	epatch_user
 	eautoreconf
 }
