@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/openbsc
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/openbsc/ChangeLog,v 1.3 2014/04/26 12:40:33 zx2c4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/openbsc/ChangeLog,v 1.4 2014/05/01 17:04:25 zx2c4 Exp $
+
+  01 May 2014; Jason A. Donenfeld <zx2c4@gentoo.org> metadata.xml,
+  openbsc-9999.ebuild:
+  Support gprs via OpenGGSN.
 
   26 Apr 2014; Jason A. Donenfeld <zx2c4@gentoo.org> openbsc-9999.ebuild:
   Use right branch.
